<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="discard">Discard</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="via">Via</string>
    <string name="search_label">Search</string>
    <string name="no_routes_found_label">Unfortunately there was no route found</string>
    <string name="no_routes_found_message">Perhaps your start or destination is not served at all or with the selected modes of transport on the required date/time (e. g. sometimes stations/stops are not served on weekends).</string>
    <string name="routes_label">Routes</string>
    <string name="route_details_label">Route details</string>
    <string name="no_route_details">Unfortunately there was no route found. Most likely this search was too old.</string>
    <string name="session_timeout_message">Most likely this search was too old.</string>
    <string name="attention_label">Attention</string>
    <string name="bad_routes_parameters_message">Start point or end point must not be empty.</string>
    <string name="new_search">SEARCH</string>
    <string name="empty_value">Missing or invalid</string>
    <string name="loading">Searching. Please wait…</string>
    <string name="my_location">My location</string>
    <string name="change_date_and_time">Change date &amp; time</string>
    <string name="reverse_start_end">Reverse from &amp; to</string>
    <string name="about">About</string>
    <string name="about_this_app">STHLM Traveling is developed by Johan Nilsson. Please contact him if you have ideas or experience any problems\n\nTraffic data is gathered with permission from Trafiklab and SL.\n\nTo improve the app further anonymous analytics is gathered with Google Analytics and Crashlytics.\n\n<b>Credits</b>\n\nMany individuals has contributed to this project, for a full list for these heroes please refer to:\nhttp://www.sthlmtraveling.se\n\n//Johan Nilsson\njohan@markupartist.com\nhttp://markupartist.com\n\nSource code\nhttp://github.com/johannilsson/sthlmtraveling\n\nPrivacy Policy\nhttp://sthlmtraveling.se/privacy.html\n\n</string>
    <string name="donate_url">http://pledgie.com/campaigns/6527</string>
    <string name="feedback">Feedback</string>
    <string name="send_email">Send email…</string>
    <string name="favorites_label">Favorites</string>
    <string name="no_favorites"><b>No favorites yet...</b>\nAdd and remove favorites by pressing the star button after a search.</string>
    <string name="reverse_search">Reverse search</string>
    <string name="delete">Delete</string>
    <string name="no_location_title">Location Problem</string>
    <string name="no_location_message">Failed to determine your location.</string>
    <string name="network_problem_label">Network problem</string>
    <string name="network_problem_message">Possible overload, a network problem or could not contact SL.</string>
    <string name="activity_create_shortcut">Routes</string>
    <string name="activity_create_departure_shortcut">Departures</string>
    <string name="name_of_shortcut">Name of shortcut</string>
    <string name="create_shortcut_label">Create Shortcut</string>
    <string name="create_shortcut_for_departure_label">Create shortcut for departure</string>
    <string name="choose_start_point_label">Choose start point</string>
    <string name="choose_end_point_label">Choose end point</string>
    <string name="send_feedback_email_title">STHLM Traveling feedback</string>
    <string name="send_feedback_email_emailaddress">sthlmtraveling@markupartist.com</string>
    <string name="history_label">History</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="retry">Retry</string>
    <string name="point_on_map">Point on map</string>
    <string name="tap_to_select_this_point">Tap to select this point</string>
    <string name="point_selected">Point selected</string>
    <string name="tap_your_end_point_on_map">Tap your end point on the map</string>
    <string name="tap_your_start_point_on_map">Tap your start point on the map</string>
    <string name="tap_your_location_on_map">Failed to determine your location. Tap your location on the map</string>
    <string name="departing_on">Departs at <xliff:g id="time">%1$s</xliff:g> on <xliff:g id="date">%2$s</xliff:g></string>
    <string name="arriving_by">Arrives at <xliff:g id="time">%1$s</xliff:g> on <xliff:g id="date">%2$s</xliff:g></string>
    <string name="departures">Departures</string>
    <string name="no_departures_for_transport_type">No departures for the selected transport type at the moment.</string>
    <string name="no_departures">No departures right now.</string>
    <string name="site_name">Stop name</string>
    <string name="stop_label">Stop</string>
    <string name="address_label">Address</string>
    <string name="refresh">Refresh</string>
    <string name="show_departures_for_start">Show departures</string>
    <string name="metros">Metros</string>
    <string name="buses">Buses</string>
    <string name="trains">Trains</string>
    <string name="trams">Light rail</string>
    <string name="tram_cars">Tram Cars</string>
    <string name="boats">Boats</string>
    <string name="departure_metro">Metro</string>
    <string name="departure_bus">Bus</string>
    <string name="departure_train">Train</string>
    <string name="departure_tram">Light rail</string>
    <string name="now">now</string>
    <string name="my_location_source_disabled">Please enable a My Location source in system settings</string>
    <string name="title_settings">Settings</string>
    <string name="now_label">Now</string>
    <string name="more_choices_label">OPTIONS</string>
    <string name="route_options_active">With additional route options</string>
    <string name="alternative_stops_label">Alternative stops</string>
    <string name="date_and_time_label">Date &amp; Time</string>
    <string name="determining_your_position">Determining your position</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="deviations_label">Deviations</string>
    <string name="new_deviations">New deviations.</string>
    <string name="no_deviations"><b>No known deviations</b></string>
    <string name="reinstall_app_message">You need to reinstall STHLM Traveling to be able to use is properly.\n\nThis is caused by a bug in Android. You can read more about this issue at my blog, http://bit.ly/fcissue.\n\nI\'m really sorry about this!</string>
    <string name="did_you_mean">Did you mean?</string>
    <string name="share_label">Share</string>
    <string name="sms_ticket_label">Buy ticket</string>
    <string name="sms_ticket_price_reduced">Reduced price</string>
    <string name="sms_ticket_price_full">Full price (20–64 yrs)</string>
    <string name="sms_ticket_notice_message">Please verify the details before you buy your ticket. STHLM Traveling can\'t guarantee that the ticket is valid for your journey.</string>
    <string name="sms_ticket_notice_disabled">SMS tickets is not available for this route.</string>
    <string name="trip_description_walk" formatted="false">Walk</string>
    <string name="trip_description_normal" formatted="false"><xliff:g id="transport">%1$s</xliff:g> towards <xliff:g id="towards">%2$s</xliff:g>.</string>
    <string name="trip_map_description_walk" formatted="false"><xliff:g id="time">%1$s</xliff:g> Walk to <xliff:g id="stop">%2$s</xliff:g></string>
    <string name="trip_map_description_normal" formatted="false"><xliff:g id="time">%1$s</xliff:g> <xliff:g id="transport">%2$s</xliff:g> towards <xliff:g id="towards">%3$s</xliff:g>.</string>
    <string name="show_all">Show all</string>
    <string name="direction">Direction</string>
    <string name="no_intermediate_stops">No intermediate stops were found.</string>
    <string name="show_intermediate_stops">Show intermediate stops</string>
    <string name="hide_intermediate_stops">Hide intermediate stops</string>
    <string name="nearby_stops">Nearby stops</string>
    <string name="nearby">Nearby</string>
    <string name="time_to" formatted="false"><xliff:g id="duration">%1$s</xliff:g> to <xliff:g id="stop">%2$s</xliff:g></string>
    <string name="departure_alarm">Alarm</string>
    <string name="alarm_preferences">Alarm preferences</string>
    <string name="enable_alarm_departure">Enable alarm for departure</string>
    <string name="enable_alarm_destination">Enable alarm for destination</string>
    <string name="enable_alarm_everyStop">Enable alarm for change of transport</string>
    <string name="alarm_set">Alarm set!</string>
    <string name="clear_alarms">Clear all alarms</string>
    <string name="alarm_already_set">Clear current alarms to set new ones</string>
    <string name="time_to_go">Time to go!</string>
    <string name="time_to_get_off">Time to get off!</string>
    <string name="alarm_departure_2min">You have to leave in 2 minutes!</string>
    <string name="alarm_departure_5min">You have to leave in 5 minutes!</string>
    <string name="alarm_departure_10min">You have to leave in 10 minutes!</string>
    <string name="alarm_departure_15min">You have to leave in 15 minutes!</string>
    <string name="alarm_departure_30min">You have to leave in 30 minutes!</string>
    <string name="alarm_destination_1min">You have to get off in 1 minutes!</string>
    <string name="alarm_destination_3min">You have to get off in 3 minutes!</string>
    <string name="alarm_destination_5min">You have to get off in 5 minutes!</string>
    <string name="invalid_time">Invalid alarm time!</string>
    <string name="select_departure_alarm">Select a time for departure alarm</string>
    <string name="select_destination_alarm">Select a time for destination alarm</string>
    <string name="you_are_arriving">You are arriving at</string>
    <string name="dialog_general_preferences">Basics</string>
    <string name="dialog_notification_preferences">Notifications</string>
    <string name="title_language_preference">Language</string>
    <string name="summary_language_preference">Choose your preferred language.</string>
    <string name="dialog_title_language_preference">Choose language</string>
    <string name="deviation_notification_preference">Deviation Notifications</string>
    <string name="deviation_notification_summary_preference">Experimental. Enabling drains battery and requires permanent internet connection.</string>
    <string name="deviation_update_interval_preference">Update interval</string>
    <string name="deviation_update_interval_summary_preference">Longer update intervals saves your battery.</string>
    <string name="deviation_lines_preference">Lines</string>
    <string name="deviation_lines_summary_preference">Comma separated list of line numvers. Eg: \'42,28,707\'.</string>
    <string name="deviation_lines_dialog_message_preference">Separate the line numbers with a comma. Eg: \'42,28,707\'.</string>
    <string name="search_include_addresses_preference">Include addresses in auto completion</string>
    <string name="search_include_addresses_summary_preference">May take longer to receive suggestions when enabled.</string>
    <string name="search_clear_history_preference">Clear search history</string>
    <string name="search_clear_history_summary_preference">Clears search history for stops and journeys.</string>
    <string name="search_clear_favorites_preference">Clear favorites</string>
    <string name="search_clear_favorites_summary_preference">Clears all favorites.</string>
    <string name="help">Help</string>
    <string name="support">Support</string>
    <string name="transport_type">Transport type</string>
    <string name="ads">Ads</string>
    <string name="ads_summary">Why does this app have ads?</string>
</resources>