<?xml version="1.0" encoding="utf-8"?><!--
/*
** Copyright (C) 2009 Johan Nilsson <http://markupartist.com>
**
** Licensed under the Apache License, Version 2.0 (the "License"); 
** you may not use this file except in compliance with the License. 
** You may obtain a copy of the License at 
**
**     http://www.apache.org/licenses/LICENSE-2.0 
**
** Unless required by applicable law or agreed to in writing, software 
** distributed under the License is distributed on an "AS IS" BASIS, 
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
** See the License for the specific language governing permissions and 
** limitations under the License.
*/
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tool="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        >

        <com.markupartist.sthlmtraveling.ui.view.DelayAutoCompleteTextView
            style="@style/AutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sites"
            android:hint="@string/site_name"
            android:paddingLeft="@dimen/list_horizontal_padding"
            android:paddingRight="@dimen/list_horizontal_padding"
            android:paddingEnd="@dimen/list_horizontal_padding"
            android:paddingTop="@dimen/list_horizontal_padding"
            android:paddingBottom="@dimen/list_horizontal_padding"
            android:textColorHint="@color/stroke"
            />
        <ImageButton
            android:id="@+id/btn_clear"
            style="?borderlessButtonStyle"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_close"
            android:paddingTop="@dimen/list_horizontal_padding"
            android:paddingBottom="@dimen/list_horizontal_padding"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:visibility="invisible"
            tool:visibility="visible"
            android:tint="#000000"
            android:layout_gravity="right"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/stroke"
            android:layout_marginLeft="@dimen/list_horizontal_padding"
            android:layout_marginRight="@dimen/list_horizontal_padding"
            android:layout_gravity="bottom"
            />

    </FrameLayout>

    <Button
        android:id="@+id/btn_nearby_stops"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nearby_stops"
        android:gravity="start|center_vertical"
        android:drawableLeft="@drawable/ic_place"
        android:drawableStart="@drawable/ic_place"
        style="?attr/borderlessButtonStyle"
        android:textColor="?android:attr/textColorPrimary"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="?android:attr/listSeparatorTextViewStyle"
        android:paddingLeft="@dimen/list_horizontal_padding"
        android:paddingRight="@dimen/list_horizontal_padding"
        android:text="@string/history_label"/>
</LinearLayout>

